--- a/action.yml
+++ b/action.yml
@@ -6,9 +6,6 @@ branding:
   color: "red"
 
 inputs:
-  creds:
-    description: "Contents of a Service Account JSON Key"
-    required: true
   instance:
     description: "CloudSQL instance"
     required: true
@@ -16,10 +13,6 @@ inputs:
     description: "Listen on port"
     required: false
     default: 5432
-  proxy_version:
-    description: "CloudSQL Proxy Version"
-    required: false
-    default: 1.21.0
 
 runs:
   using: "composite"
@@ -27,18 +20,12 @@ runs:
     - name: Start Google Cloud SQL Proxy
       shell: bash
       run: |
-        # write google application credentials to a temporary file to be used inside the container
-        mkdir -p /tmp/gce-cloudsql-proxy
-        echo '${{ inputs.creds }}' > /tmp/gce-cloudsql-proxy/key.json
+        # Download Linux binary
+        wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy        
+        chmod +x cloud_sql_proxy
 
-        # start container
-        docker run -d --net host --name gce-cloudsql-proxy --restart on-failure \
-        -v /tmp/gce-cloudsql-proxy:/tmp/gce-cloudsql-proxy \
-        gcr.io/cloudsql-docker/gce-proxy:${{ inputs.proxy_version }} \
-        /cloud_sql_proxy \
-          -credential_file /tmp/gce-cloudsql-proxy/key.json \
-          -dir /tmp \
-          -instances=${{ inputs.instance }}=tcp:127.0.0.1:${{ inputs.port }}
+        # Start Cloud SQL Proxy
+        ./cloud_sql_proxy -instances=${{ inputs.instance }}=tcp:127.0.0.1:${{ inputs.port }} &
 
         # wait until connections are accepted
         sleep 3
@@ -52,9 +39,6 @@ runs:
           fi
           sleep 2
         done
-
-        # print container logs
-        docker logs gce-cloudsql-proxy
 
         # exit with error code if we couldn't connect
         if [[ $isready -ne 0 ]]; then
