--- a/action.yml
+++ b/action.yml
@@ -21,7 +21,7 @@ runs:
       shell: bash
       run: |
         # Download Linux binary
-        wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy        
+        wget https://storage.googleapis.com/cloud-sql-connectors/cloud-sql-proxy/v2.15.1/cloud-sql-proxy.linux.amd64 -O cloud_sql_proxy        
         chmod +x cloud_sql_proxy
 
         # Start Cloud SQL Proxy
